# better-restic-client

./: .gitignore  Cargo.toml  README.md  config.yaml
src/: main.rs  web.rs
static/: index.html
